Add styling for h2 and change h1 text-align
The h1 and newly added h2 were off center and using text-align fixed that even though their grid tracks were centered in the column.
I need to adjust the size of the marker elements as the markers added enlarge and throw off the board layout.

--- a/style.css
+++ b/style.css
@@ -63,9 +63,13 @@ body,
 
 h1 {
     font-size: 2rem;
+    text-align: center;
 }
 .marker{
     display: inline;
     font-size: 5rem;
     background-color: lightgray;
+}
+h2 {
+    text-align: center;
 }
