--- a/style.css
+++ b/style.css
@@ -53,23 +53,40 @@ body,
 #gameBoard {
     display: grid;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
-
-#boardRow{
+#gameBoard{
+    grid-template-rows: repeat(3,1fr);
+    justify-content: stretch;
+}
+.boardRow{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-h1 {
-    font-size: 2rem;
-    text-align: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+    justify-content: stretch;
 }
 .marker{
     display: inline;
     font-size: 5rem;
     background-color: lightgray;
+    text-align: center;
+}
+h1 {
+    font-size: 2rem;
+    text-align: center;
 }
 h2 {
     text-align: center;
+    font-size: 3rem;
+}
+
+#players {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: space-between;
+}
+#playerOneDisplay,
+#playerTwoDisplay {
+    text-align: center;
+    border: 1px solid gray;
 }
