--- a/style.css
+++ b/style.css
@@ -75,11 +75,6 @@ h1 {
     font-size: 2rem;
     text-align: center;
 }
-h2 {
-    text-align: center;
-    font-size: 3rem;
-}
-
 #players {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -89,4 +84,10 @@ h2 {
 #playerTwoDisplay {
     text-align: center;
     border: 1px solid gray;
+}
+#result{
+    background-color: green;
+    text-align: center;
+    font-size: 3rem;
+    padding: 5px;
 }
