--- a/style.css
+++ b/style.css
@@ -89,5 +89,10 @@ h1 {
     background-color: green;
     text-align: center;
     font-size: 3rem;
-    padding: 5px;
+}
+.highlight{
+    background-color: yellow;
+}
+.combination {
+    background-color: green;
 }
